--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
     "private": true,
     "homepage": "https://dashboard.javiersanchez.dev",
     "dependencies": {
-        "react-jss": "^10.4.0",
+        "jquery": "^3.5.1",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-burger-menu": "^2.6.13",
+        "react-collapsible-content": "^1.0.0",
         "react-dom": "^16.8.6",
+        "react-jss": "^10.4.0",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "react-svg-line-chart": "^2.0.1",
-        "simple-flexbox": "^2.3.1",
-        "react-collapsible-content": "^1.0.0",
-        "react-router-dom": "^5.2.0"
+        "simple-flexbox": "^2.3.1"
     },
     "scripts": {
         "start": "react-scripts start",
