--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "homepage": "https://dashboard.javiersanchez.dev",
     "dependencies": {
-        "jquery": "^3.5.1",
+        "axios": "^0.21.1",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-burger-menu": "^2.6.13",
